# truck-tracking-system

./: .gitignore  Makefile  README.md  docker-compose.yml  notifications-server.Dockerfile  pyproject.toml  tts-server.Dockerfile
app/: config.py  run_delivery_request_trigger.py  run_notifications_server.py  run_simulation.py  run_tts_server.py
app/clients/: maps.py  pub_sub.py
app/simulation/: event.py  fleet.py  journey.py  log.py  route.py  server.py  truck.py  tts.py  utils.py
app/telegram_bot_server/: schemas.py  server.py
infra/: Makefile  main.tf  output.tf  secrets.template.sh  terraform.tfstate  terraform.tfvars
infra/avro_schemas/: domain_logs_schema.avsc  iot_events_schema.avsc  journeys_schema.avsc
scripts/: run_notifications_server.sh  run_tts_server.sh
